--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,75 @@
 @import url(common.css);
+.text_form {
+    color: #fff;
+    position: relative;
+    text-align: center;
+}
+.sub_text_form{
+    color: #bababa!important;
+}
+
+.page_form{
+    background: #1c1c1c;
+    position: absolute;
+    font-style: inherit;
+    font-variant-ligatures: inherit;
+    font-variant-caps: inherit;
+    font-variant-numeric: inherit;
+    font-variant-east-asian: inherit;
+    font-weight: inherit;
+    font-stretch: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    font-family: inherit;
+    vertical-align: baseline;
+}
+.button{
+    border-color: transparent;
+    border-style: solid;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: inline-block;
+    position: relative;
+    max-width: 100%;
+    text-decoration: none;
+    text-align: center;
+    background-position: 50%;
+    overflow: visible;
+    cursor: pointer;
+    box-shadow: 0 0 0 0 transparent;
+    background-color: #c09a64;
+    color: #fff;
+}
+.forms{border-color: #bababa;
+    background-color: rgb(28, 28, 28);
+    color: #FFFFFF;
+    --w-get-input-background-color: #111111;
+    --w-get-input-color: #FFFFFF;
+    display: block;
+    width: 100%;
+    margin-top: 12px
+  
+}
+.full_name_form input{
+    height: 39px;
+    width: 200px;
+    background-color: #111111;
+    color: #bababa;
+    border-color: transparent;
+    margin-top: 2%;
+}
+.date_form{
+    display: flex;
+    height: 39px;
+    width: 200px;
+    background-color: #111111;
+}
+.text_form{
+    font-family: 'Playfair Display', serif;
+    font-size: 28px;
+}
+.sub_text_form{
+    font-family: 'PT Sans', sans-serif;
+}
