changed contact-form.css into styles.css

--- a/css/index.css
+++ b/css/index.css
@@ -13,5 +13,5 @@
 @import url(pricing.css); /* Block-11 Максим Мельник */
 /* Block-12 Ольга Станіславська */
 /* Block-13 Ольга Станіславська */
-@import url(contact-form.css);    /* Block-14 Брошко Христина */
+@import url(form.css);    /* Block-14 Брошко Христина */
 @import url(footer.css);  /* Block-15 Віктор Зварич*/
