--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,5 @@
-.header {
-    /* display: flex; */
+/* .header {
+
 }
 
 .header__nav {
@@ -8,7 +8,7 @@
 
 .header__logo {
 
-}
+} */
 
 .header__logo-image {
     width: 174px;
