--- a/css/common.css
+++ b/css/common.css
@@ -19,6 +19,7 @@ body {
     --secondary-text-color: #c09a64;
     --paragraph-text-color: rgb(186, 186, 186);
     --primary-background-color: #000000;
+    --secondary-background-color: #1c1c1c;
     --button-background-color: #c09a64;
 }
 
