changed rgb of paragraph-text-color into hex

--- a/css/common.css
+++ b/css/common.css
@@ -17,7 +17,7 @@ body {
     --secondary-text-weight: 700;
     --primary-text-color: #ffffff;
     --secondary-text-color: #c09a64;
-    --paragraph-text-color: rgb(186, 186, 186);
+    --paragraph-text-color: #bababa;
     --primary-background-color: #000000;
     --secondary-background-color: #1c1c1c;
     --button-background-color: #c09a64;
