--- a/css/about.css
+++ b/css/about.css
@@ -4,10 +4,6 @@
     padding-right: 24px;
 }
 
-.main__photo-of-girl,
-.about__container {
-    padding: 0px 15px;
-}
 
 .main__photo-of-girl {
     margin-bottom: 50px;
@@ -78,6 +74,7 @@
 
     .about__container {
         flex-basis: 100%;
+        margin-left: 25px;
 
     }
 }
