--- a/css/common.css
+++ b/css/common.css
@@ -26,6 +26,8 @@ body {
     --secondary-background-color: #1c1c1c;
     --button-background-color: #c09a64;
     --conteiner-background-color: rgb(28 28 28);
+    --button_slide_color: rgba(255, 255, 255, 0.25);
+
 }
 
 img {
