--- a/css/works.css
+++ b/css/works.css
@@ -47,7 +47,8 @@
     width: auto;
     padding: 16px;
     margin-top: -22px;
-    color: white;
+    background-color: var(--button-background-color);
+    color:var(--paragraph-text-color);
     font-weight: bold;
     font-size: 18px;
     transition: 0.6s ease;
