--- a/css/common.css
+++ b/css/common.css
@@ -35,3 +35,35 @@ img {
     width: 100%;
     height: 100%;
 }
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+.section-title {
+    font-family: var(--secondary-font);
+    font-size: 28px;
+    color: var(--primary-text-color);
+    font-weight: 700;
+    font-style: normal;
+    letter-spacing: 0.05em;
+}
+
+.subtitle {
+    font-family: var(--primary-font);
+    font-size: 14px;
+    color: var(--paragraph-text-color);
+    letter-spacing: .1em
+}
+
+.paragraph-text {
+    font-family: var(--primary-font);
+    color: var(--paragraph-text-color);
+    letter-spacing: 0.1em
+}
+
+.short-line {
+    height: 1px;
+    background-color:#bababa;
+    margin: auto;
+}
