corrected mistakes in styles

--- a/css/header.css
+++ b/css/header.css
@@ -12,9 +12,8 @@
       
   }*/
   
-  .header__logo {
-  margin-left: ;
-  } 
+  /* .header__logo {
+  }  */
   
   .header__logo-image {
     width: 174px;
