--- a/css/controls.css
+++ b/css/controls.css
@@ -6,6 +6,7 @@
     color: var(--primary-text-color);
     letter-spacing: 0.2em;
     background-color: var(--button-background-color);
+    transition: background-color 0.3s;
     border: 1px;
     padding: 19px 21px;
     margin: 10px;
@@ -24,6 +25,7 @@
     color: var(--primary-text-color);
     letter-spacing: 0.2em;
     background-color: var(--primary-background-color);
+    transition: background-color 0.3s;
     border: 1px solid #6c6c6c;
     padding: 19px 21px;
     margin: 10px;
