--- a/css/works.css
+++ b/css/works.css
@@ -28,49 +28,35 @@
 
 .latest-work__photos {
     margin-top: 45px ;
+    display: grid;
 }
 
 /* Slideshow container */
 .latest-work__photos {
     max-width: 1170px;
+    min-height: max-content;
     margin-left: auto;
     margin-right: auto;
     position: relative;
     padding: 0px 24px;
   }
   
-  /* Next & previous buttons */
+  /* Next & previous buttons 
   .latest-work__prev, .latest-work__next {
     cursor: pointer;
     position: absolute;
     top: 50%;
-    width: auto;
-    padding: 16px;
-    margin-top: -22px;
+    width: 5%;
+    height: 5%;
+    padding: 0px 16px 20px 16px;
     background-color: var(--button-background-color);
     color:var(--paragraph-text-color);
     font-weight: bold;
-    font-size: 18px;
+    font-size: 100%;
     transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-  }
+    border-radius: 100%;
+  }*/
 
-  .latest-work__prev {
-    left: 0;
-  }
-  
-  /* Position the "next button" to the right */
-  .latest-work__next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-  }
-  
-  /* On hover, add a black background color with a little bit see-through */
-  .latest-work__prev:hover, .latest-work__next:hover {
-    background-color: rgba(0,0,0,0.8);
-  }
-  
-  
   /* Fading animation */
   .latest-work__fade {
     -webkit-animation-name: fade;
@@ -105,3 +91,36 @@
   .latest-work__image__girl-jaket {
     display: none;
   }
+
+  .latest-work__image {
+    padding: auto;
+
+  }
+
+.latest-work__prev__container,
+.latest-work__next__container{
+  position: absolute;
+  top: 50%;
+  background-color: var(--button-background-color);
+  border-radius: 100%;
+  height: 5%;
+  width: 5%;
+  color: var(--button_slide_color);
+}
+
+.latest-work__prev__container{
+  left: 1%;
+}
+
+.latest-work__prev__container:hover{
+  background-color: var(--button_slide_color);
+}
+
+.latest-work__next__container {
+  right: 1%;
+}
+
+.latest-work__prev,
+.latest-work__next {
+  top: 50%;
+}
