--- a/css/works.css
+++ b/css/works.css
@@ -81,11 +81,12 @@
   }
 
   .latest-work__image__girl-sun {
-    display: block;
+    display: grid;
   }
 
   .latest-work__image__girl-turn {
     display: none;
+    padding: 0px auto;
   }
 
   .latest-work__image__girl-jaket {
@@ -103,9 +104,10 @@
   top: 50%;
   background-color: var(--button-background-color);
   border-radius: 100%;
-  height: 5%;
-  width: 5%;
+  height: 24px;
+  width: 24px;
   color: var(--button_slide_color);
+  
 }
 
 .latest-work__prev__container{
@@ -123,4 +125,24 @@
 .latest-work__prev,
 .latest-work__next {
   top: 50%;
+}
+
+@media (min-width: 768px) {
+  /*.latest-work__image {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+
+  }
+  .latest-work__image__girl-sun {
+    display: grid;
+  }
+
+  .latest-work__image__girl-turn {
+    display: grid;
+  }
+
+  .latest-work__image__girl-jaket {
+    display: none;
+  }*/
+  
 }
