changed header styles

--- a/css/header.css
+++ b/css/header.css
@@ -1,8 +1,7 @@
 .header {
     min-width: 320px;
-    max-width: 1200px;
     margin: auto;
-    padding: 30px 24px;  
+    padding: 30px 24px 0;  
     background-image: url(../img/hero-background.png);
     background-size: cover;
     background-position: 50% 100%;
