--- a/css/header.css
+++ b/css/header.css
@@ -11,7 +11,7 @@
 .header__nav {
   position: fixed;
   top: 0;
-  width: 90%;
+  width: 80%;
   display: flex;
   justify-content: space-around;
   z-index: 10;
@@ -197,6 +197,7 @@ body.lock {
     width: 100%;
     height: 100%;
     padding: 0;
+    background-color: #00000057;
     z-index: 10;
   }
 
