--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@
 @import url(works.css);   /* Block-3 Олексій Новосядло */
 /* Block-4 Бандура Роман */
 /* Block-5 Бандура Роман */
-/* Block-6 Олег Онопрійчук */
+@import url(why.css);     /* Block-6 Олег Онопрійчук */
 /* Block-7 Миронюк Марта */
 /* Block-8 Юрій Мурачов */
 /* Block-9 Миронюк Марта */
