--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@
 /* Block-9 Миронюк Марта */
 /* Block-10 Максим Мельник */
 @import url(pricing.css); /* Block-11 Максим Мельник */
-/* Block-12 Ольга Станіславська */
-/* Block-13 Ольга Станіславська */
+@import url(portfolio.css); /* Block-12 Ольга Станіславська */
+@import url(faq.css); /* Block-13 Ольга Станіславська */
 @import url(form.css);    /* Block-14 Брошко Христина */
 @import url(footer.css);  /* Block-15 Віктор Зварич*/
