added css services

--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@
 @import url(hero.css);    /* Block-1 Віктор Зварич */
 @import url(about.css);   /* Block-2 Олексій Новосядло */
 @import url(works.css);   /* Block-3 Олексій Новосядло */
-/* Block-4 Бандура Роман */
+@import url(services.css);/* Block-4 Бандура Роман */
 /* Block-5 Бандура Роман */
 @import url(why.css);     /* Block-6 Олег Онопрійчук */
 /* Block-7 Миронюк Марта */
