--- a/css/hero.css
+++ b/css/hero.css
@@ -36,10 +36,17 @@
   padding: 17px 25px 35px;
   font-size: 14px;
   text-align: center;
+  font-family: var(--primary-font);
+  font-size: 14px;
+  color: var(--paragraph-text-color);
+  letter-spacing: 0.1em;
 }
 
 .hero__line {
   width: 8%;
+  height: 1px;
+  background-color: var(--line-color);
+  margin: auto;
 }
 
 .hero__image-dots {
