--- a/css/header.css
+++ b/css/header.css
@@ -177,7 +177,7 @@ body.lock {
     width: 100%;
     height: 100%;
     padding: 0;
-    background-color: rgba(0, 0, 0, 0.082);
+    background-color: none;
     z-index: 10;
   }
 
