--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@
 @import url(why.css);     /* Block-6 Олег Онопрійчук */
 /* Block-7 Миронюк Марта */
 /* Block-8 Юрій Мурачов */
-/* Block-9 Миронюк Марта */
+@import url(collaboration.css);/* Block-9 Миронюк Марта */
 /* Block-10 Максим Мельник */
 @import url(pricing.css); /* Block-11 Максим Мельник */
 @import url(portfolio.css); /* Block-12 Ольга Станіславська */
