--- a/css/form.css
+++ b/css/form.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&family=Playfair+Display&display=swap');
 .text_form {
     color: #fff;
     position: relative;
@@ -54,26 +55,61 @@
 .date_form{
     display: flex;
     height: 39px;
-    width: 85%;
+    width: 100%;
     background-color: #111111;
     
 }
 .text_form{
     font-family: 'Playfair Display', serif;
-    font-size: 28px;
+    font-size: 34px;
+    font-weight: 600;
     width: 50%;
-    margin: 0 auto;
+    margin: 15px auto;
+    letter-spacing: 2px;
+    display: flex;
+    justify-content: center;
+   
+    
 }
 .sub_text_form{
     font-family: 'PT Sans', sans-serif;
+    font-size: 85%;
+    width: 75%;
+    margin: 3% auto;
+    text-align: center;
+    letter-spacing: 1.5px;
+    
 }
 .main_background_for_form{
     background-image: url("../img/manwithhat.png");
-    width: 100%;
-    height: 800px;
+    width: 100vw;
+    height:100vh;
+
   
 }
 .block-form {
     width: 30%;
     background-color: rgb(28, 28, 28);;
+}
+.page_form{
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 5%;
+    padding-right: 10%;
+}
+.main_background_for_form img{
+    width: 100%;
+    height: 100%;
+}
+.hr_1{
+    background-color: #fff;
+    height: 1px;
+    width: 10%;
+    margin: 0 auto;
+   
+}
+.button_style{
+    width: 80%;
+    height: 50px;
+    margin: 7% auto;
 }
