added changes css to testimonials

--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@
 /* Block-5 Бандура Роман */
 @import url(why.css);     /* Block-6 Олег Онопрійчук */
 /* Block-7 Миронюк Марта */
-/* Block-8 Юрій Мурачов */
+/* Block-8 Юрій Мурачов */@import url(testimonials.css);
 @import url(collaboration.css);/* Block-9 Миронюк Марта */
 /* Block-10 Максим Мельник */
 @import url(pricing.css); /* Block-11 Максим Мельник */
