--- a/css/form.css
+++ b/css/form.css
@@ -82,8 +82,8 @@
 }
 .main_background_for_form{
     background-image: url("../img/manwithhat.png");
-    width: 100vw;
-    height:100vh;
+    width: 100%;
+    height:100%;
 
   
 }
