--- a/css/form.css
+++ b/css/form.css
@@ -82,9 +82,9 @@
 }
 .main_background_for_form{
     background-image: url("../img/manwithhat.png");
-    max-width: 1100px;
+    width: 100%;
     height:100%;
-    margin:auto;
+    
 
   
 }
