--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,6 +1,8 @@
 .block-portfolio {
     padding-top: 60px;
     padding-bottom: 60px;
+    max-width: 1170px;
+    margin: auto;
 }
 
 .portfolio {
@@ -20,20 +22,41 @@
     }
 }
 
-/* .portfolio__header
-
-.portfolio__header-title */
 
 .portfolio__header-line {
     padding: 15px;
 }
 
 .portfolio__carusel {
+    display: flex;
+    align-items: center;
+}
+
+.portfolio__carusel-photoes {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+} 
+
+.portfolio__carusel-photoes img{
+    padding: 10px;
+}
+
+.portfolio__carusel button {
+    z-index: 10;
+    background-color: var(--button-background-color);
+    border-radius: 50%;
+    height: 32px;
+    width: 32px;
+}
+
+/*
+.portfolio__carusel {
     margin-top: 50px;
     display: grid;
     grid-template-columns: 1fr;
     gap: 15px;
-}
+} 
 
 @media (min-width: 768px) {
     .portfolio__carusel {
@@ -45,4 +68,4 @@
     .portfolio__carusel {
         grid-template-columns: 1fr 1fr 1fr;
     }
-}
+} */
