Changed carousel to glider, added glider.js, glider.css

--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,7 @@
 /* Block-10 Максим Мельник */
 @import url(pricing.css); /* Block-11 Максим Мельник */
 @import url(portfolio.css); /* Block-12 Ольга Станіславська */
+@import url(glider.css);
 @import url(faq.css); /* Block-13 Ольга Станіславська */
 @import url(form.css);    /* Block-14 Брошко Христина */
 @import url(footer.css);  /* Block-15 Віктор Зварич*/
