--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,6 +1,6 @@
 .block-portfolio {
     padding-top: 60px;
-    padding-bottom: 60px;
+    /* padding-bottom: 60px; */
     max-width: 1170px;
     margin: auto;
 }
@@ -22,7 +22,9 @@
     }
 }
 
-
+.portfolio__header-subtitle {
+    margin-bottom: 50px;
+}
 .portfolio__header-line {
     padding: 15px;
 }
@@ -37,16 +39,19 @@
     margin-top: 50px;
     display: flex;
     justify-content: space-between;
+    overflow: hidden;
+    scroll-behavior: smooth;
 } 
 
 .portfolio__carusel-photoes img{
-    padding: 10px;
+    padding: 15px;
 }
 
 .portfolio__carusel button {
     z-index: 10;
     background-color: var(--button-background-color);
     border-radius: 50%;
+    border-width: 0;
     height: 32px;
     width: 32px;
     position: absolute;
@@ -55,18 +60,11 @@
 .portfolio__carusel-btn-prev img, .portfolio__carusel-btn-next img  {
     width: 20px;
     height: 20px;
+    margin: auto;
 }
 
 
-.portfolio__carusel-btn-prev {
-    top: 50%;
-    left: -0.5%;
-}
 
-.portfolio__carusel-btn-next {
-    top: 50%;
-    right: -0.5%;
-}
 
 /*
 .portfolio__carusel {
