--- a/css/form.css
+++ b/css/form.css
@@ -125,3 +125,13 @@
     }
 
 }
+
+.buttom-date-form [type="date"] {
+    background-color: #111111;
+    color: #FFFFFF8A;
+    width: 100%;
+    padding: 14px 20px;
+    border: none;
+    outline: none;
+    font-size: 14px;
+}
